versioned_docs/version-0.30.0/api/mobile/index.md
# @fishjam-cloud/react-native-client

React Native client SDK for building mobile video and audio apps with Fishjam.

## Connection

- [useConnection](functions/useConnection.md)
- [useDataChannel](functions/useDataChannel.md)
- [Metadata](type-aliases/Metadata.md)
- [useUpdatePeerMetadata](variables/useUpdatePeerMetadata.md)
- [useVAD](variables/useVAD.md)

## Other

- [failIncomingCallConnected](functions/failIncomingCallConnected.md)
- [FishjamProvider](functions/FishjamProvider.md)
- [fulfillIncomingCallConnected](functions/fulfillIncomingCallConnected.md)
- [getPendingAnswerRequestId](functions/getPendingAnswerRequestId.md)
- [isCallHeld](functions/isCallHeld.md)
- [pushAudioSamples](functions/pushAudioSamples.md)
- [reportOutgoingCallConnected](functions/reportOutgoingCallConnected.md)
- [RTCPIPView](functions/RTCPIPView.md)
- [RTCView](functions/RTCView.md)
- [setCallHeld](functions/setCallHeld.md)
- [setCallMuted](functions/setCallMuted.md)
- [startPIP](functions/startPIP.md)
- [stopPIP](functions/stopPIP.md)
- [useAudioOutput](functions/useAudioOutput.md)
- [useCallKit](functions/useCallKit.md)
- [useCallKitEvent](functions/useCallKitEvent.md)
- [useCallKitService](functions/useCallKitService.md)
- [useCamera](functions/useCamera.md)
- [useCameraPermissions](functions/useCameraPermissions.md)
- [useCustomAudioSource](functions/useCustomAudioSource.md)
- [useCustomSource](functions/useCustomSource.md)
- [useInitializeDevices](functions/useInitializeDevices.md)
- [useLivestreamStreamer](functions/useLivestreamStreamer.md)
- [useLivestreamViewer](functions/useLivestreamViewer.md)
- [useMicrophone](functions/useMicrophone.md)
- [useMicrophonePermissions](functions/useMicrophonePermissions.md)
- [usePeers](functions/usePeers.md)
- [useScreenShare](functions/useScreenShare.md)
- [useTelecom](functions/useTelecom.md)
- [useTelecomEvent](functions/useTelecomEvent.md)
- [useVoIP](functions/useVoIP.md)
- [VoIPProvider](functions/VoIPProvider.md)
- [AudioDeviceType](enumerations/AudioDeviceType.md)
- [Variant](enumerations/Variant.md)
- [MediaStream](classes/MediaStream.md)
- [MediaStreamTrack](classes/MediaStreamTrack.md)
- [CustomAudioSink](interfaces/CustomAudioSink.md)
- [CustomAudioTrack](interfaces/CustomAudioTrack.md)
- [DataChannelOptions](interfaces/DataChannelOptions.md)
- [JoinRoomConfig](interfaces/JoinRoomConfig.md)
- [SimulcastConfig](interfaces/SimulcastConfig.md)
- [UseCustomAudioSourceOptions](interfaces/UseCustomAudioSourceOptions.md)
- [UseCustomAudioSourceResult](interfaces/UseCustomAudioSourceResult.md)
- [AudioDevice](type-aliases/AudioDevice.md)
- [AudioOutputChangedInfo](type-aliases/AudioOutputChangedInfo.md)
- [AuthErrorReason](type-aliases/AuthErrorReason.md)
- [BandwidthLimits](type-aliases/BandwidthLimits.md)
- [Brand](type-aliases/Brand.md)
- [CallEndedReason](type-aliases/CallEndedReason.md)
- [CallKitAction](type-aliases/CallKitAction.md)
- [CallKitConfig](type-aliases/CallKitConfig.md)
- [ConnectStreamerConfig](type-aliases/ConnectStreamerConfig.md)
- [ConnectViewerConfig](type-aliases/ConnectViewerConfig.md)
- [CurrentCall](type-aliases/CurrentCall.md)
- [CustomSource](type-aliases/CustomSource.md)
- [DataCallback](type-aliases/DataCallback.md)
- [DeviceError](type-aliases/DeviceError.md)
- [DeviceItem](type-aliases/DeviceItem.md)
- [FishjamProviderProps](type-aliases/FishjamProviderProps.md)
- [ForegroundServiceConfig](type-aliases/ForegroundServiceConfig.md)
- [InitializeDevicesResult](type-aliases/InitializeDevicesResult.md)
- [InitializeDevicesSettings](type-aliases/InitializeDevicesSettings.md)
- [InitializeDevicesStatus](type-aliases/InitializeDevicesStatus.md)
- [JoinErrorReason](type-aliases/JoinErrorReason.md)
- [MiddlewareResult](type-aliases/MiddlewareResult.md)
- [PeerId](type-aliases/PeerId.md)
- [PeerStatus](type-aliases/PeerStatus.md)
- [PeerWithTracks](type-aliases/PeerWithTracks.md)
- [PermissionStatus](type-aliases/PermissionStatus.md)
- [PersistLastDeviceHandlers](type-aliases/PersistLastDeviceHandlers.md)
- [ReconnectConfig](type-aliases/ReconnectConfig.md)
- [ReconnectionStatus](type-aliases/ReconnectionStatus.md)
- [RemoteTrack](type-aliases/RemoteTrack.md)
- [RoomType](type-aliases/RoomType.md)
- [RTCPIPViewProps](type-aliases/RTCPIPViewProps.md)
- [RTCVideoViewProps](type-aliases/RTCVideoViewProps.md)
- [SimulcastBandwidthLimit](type-aliases/SimulcastBandwidthLimit.md)
- [SimulcastBandwidthLimits](type-aliases/SimulcastBandwidthLimits.md)
- [StreamConfig](type-aliases/StreamConfig.md)
- [StreamerInputs](type-aliases/StreamerInputs.md)
- [TelecomConfig](type-aliases/TelecomConfig.md)
- [TelecomEvent](type-aliases/TelecomEvent.md)
- [TelecomEventType](type-aliases/TelecomEventType.md)
- [Track](type-aliases/Track.md)
- [TrackBandwidthLimit](type-aliases/TrackBandwidthLimit.md)
- [TrackFields](type-aliases/TrackFields.md)
- [TrackId](type-aliases/TrackId.md)
- [TrackMiddleware](type-aliases/TrackMiddleware.md)
- [TracksMiddleware](type-aliases/TracksMiddleware.md)
- [TracksMiddlewareResult](type-aliases/TracksMiddlewareResult.md)
- [UseAudioOutputResult](type-aliases/UseAudioOutputResult.md)
- [UseCameraResult](type-aliases/UseCameraResult.md)
- [UseCustomSourceResult](type-aliases/UseCustomSourceResult.md)
- [UseDataChannelResult](type-aliases/UseDataChannelResult.md)
- [UseInitializeDevicesParams](type-aliases/UseInitializeDevicesParams.md)
- [UseInitializeDevicesReturn](type-aliases/UseInitializeDevicesReturn.md)
- [UseLivestreamStreamerResult](type-aliases/UseLivestreamStreamerResult.md)
- [UseLivestreamViewerResult](type-aliases/UseLivestreamViewerResult.md)
- [UseMicrophoneResult](type-aliases/UseMicrophoneResult.md)
- [UseSandboxProps](type-aliases/UseSandboxProps.md)
- [UseScreenShareResult](type-aliases/UseScreenShareResult.md)
- [UseTelecomResult](type-aliases/UseTelecomResult.md)
- [VoIPCallIntent](type-aliases/VoIPCallIntent.md)
- [VoIPCallStatus](type-aliases/VoIPCallStatus.md)
- [VoIPContextValue](type-aliases/VoIPContextValue.md)
- [VoIPEventHandlers](type-aliases/VoIPEventHandlers.md)
- [VoIPIncomingPayload](type-aliases/VoIPIncomingPayload.md)
- [VoIPProviderProps](type-aliases/VoIPProviderProps.md)
- [ScreenCapturePickerView](variables/ScreenCapturePickerView.md)
- [SimulcastConfig](variables/SimulcastConfig.md)
- [useForegroundService](variables/useForegroundService.md)
- [useSandbox](variables/useSandbox.md)
- [useVoIPEvents](variables/useVoIPEvents.md)
